# penlai

./: .env.example  .gitignore  Cargo.toml  debug_query  readme.md
examples/: ai_example.rs  async_context_test.rs  comprehensive_test.rs  concurrent_context_test.rs  context_aware_ai.rs  debug_domain_classifier.rs  detailed_debug.rs  domain_classifier_test.rs  intelligent_search_example.rs  lifecycle_test.rs  web_search_example.rs
src/: lib.rs  main.rs  tests.rs
src/cache/: cache.rs
src/context/: context_loader.rs  context_management.rs  llm_context.rs  mod.rs
src/domain/: domain_classifier.rs  keywords.json  mod.rs
src/monitoring/: monitoring.rs
src/processing/: concurrent_processor.rs  mod.rs
src/selection/: async_context_selector.rs  context_selector.rs  mod.rs
src/strategy/: strategy.rs
src/utils/: ai_client.rs  ai_integration.rs  async_runtime.rs  intelligent_search.rs  mod.rs  utils.rs  web_search.rs
