[package]
name = "penlai"
version = "0.1.0"
edition = "2021"
authors = ["Hugo Lee <3147264070@qq.com>"]

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json", "gzip"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.0", features = ["derive"] }
anyhow = "1.0"
futures = "0.3"
dotenv = "0.15"
log = "0.4"
env_logger = "0.10"
uuid = { version = "1", features = ["v4", "serde"] }
base64 = "0.21"
chrono = { version = "0.4", features = ["serde"] }
async-trait = "0.1"
thiserror = "1.0"
mime = "0.3"
tokio-util = "0.7"
bytes = "1.0"
multipart = "0.18"
lazy_static = "1.4"
url = "2.3"
regex = "1.7"
axum = { version = "0.6", features = ["json"] }
tower = "0.4"
hyper = { version = "0.14", features = ["full"] }
hyper-tls = "0.5"
tokio-stream = "0.1"
moka = { version = "0.12", features = ["future"] }
urlencoding = "2.1"